--- a/one-pager/resume_template.tex
+++ b/one-pager/resume_template.tex
@@ -27,8 +27,8 @@
 \markright{Seeking: research collaborations, summer internship in tech policy, privacy, or security}
 
 \name{Maggie Oates} % Your name
-\address{7243 Whipple St, Pittsburgh, Pennsylvania 15218} % Your address
-\address{765-404-1973 \addressSep   moates@cmu.edu \addressSep   oatesmargar@gmail.com} % Your phone number and email
+\address{5000 Forbes Ave, Pittsburgh, Pennsylvania 15213} % Your address
+\address{123-333-3333 \addressSep   moates@cmu.edu \addressSep   oatesmargar@gmail.com} % Your phone number and email
 %\address{ORCID ID: 0000-0002-1109-2030} % Your phone number and email
 
 \begin{document}
