--- a/cv.tex
+++ b/cv.tex
@@ -41,7 +41,7 @@
 
 {\bf Carnegie Mellon University, PhD Student} \hfill Started August 2017 \\ 
 \textit{Societal Computing PhD, Institute for Software Research} \hfill {\em Pittsburgh, PA}\\
-Research Interests: Usable Privacy and Security, Authentication, Tech \& Art
+Research Interests: Usable Privacy and Security, Authentication, Tech Policy, Tech \& Art
 
 {\bf Indiana University, BS in Computer Science} \hfill May 2017 \\ 
 \textit{Concentration: Artificial Intelligence} \hfill {\em Bloomington, IN}\\
@@ -78,7 +78,7 @@ Minors: Mathematics, Linguistics, International Studies
 	\item Developed and taught weekly lab curriculum for Intro to CS and Data Structures courses 
 	\end{rSubsection}
 
-	\begin{rSubsection}{Social Computing Researcher}{Dec 2014 - Dec 2015}
+	\begin{rSubsection}{Social Informatics Researcher}{Dec 2014 - Dec 2015}
 	{Indiana University}{Bloomington, IN }
 	\item Studied the sociotechnical impact of character encoding on searchability for minority groups
 	\item Awarded 2\textsuperscript{nd} Overall at the IU Computer Science Research Symposium
@@ -91,7 +91,7 @@ Minors: Mathematics, Linguistics, International Studies
 
 	\begin{rSubsection}{Resident Assistant \& Diversity Educator}{Aug 2014 - Dec 2015}
 	{Indiana University}{Bloomington, IN }
-	\item Facilitated educational programs to educate 1000 students \& staff on diversity \& inclusion topics (2014)
+	\item Facilitated two dozen educational programs and events to educate 1000 students \& staff on diversity \& inclusion topics (2014)
 	\item Supported a floor of 50 women in STEM (2015) in academic \& community development 
 	\end{rSubsection}
 
@@ -106,25 +106,29 @@ Minors: Mathematics, Linguistics, International Studies
 %------------------------------------------------
 %    Service
 %------------------------------------------------
+\newpage
 \begin{rSection}{Service}
 
 	{\bf AnitaB.org Board of Trustees} \hfill Oct 2017 - \\ 
 	\textit{Student Board Member} 
 
-	{\bf Graduate Student Assocation} \hfill Aug 2017 - \\ 
+	{\bf Graduate Student Assocation} \hfill Aug 2017 - Sept 2018 \\ 
 	\textit{Student Senate Representative} 
 
-	{\bf Ethics for Technologists} \hfill Fall 2018 \\ 
-	\textit{Organizer} 
+	{\bf Ethics for Technologists Lecture Series} \hfill Fall 2018 - \\ 
+	\textit{Founder, Organizer} 
 
-	{\bf Science \& Technology Studies Reading Group} \hfill Summer 2018 \\ 
-	\textit{Organizer} 
-
+	{\bf Science \& Technology Studies for CS Reading Group} \hfill Summer 2018 \\ 
+	\textit{Founder, Organizer} 
 	
+	{\bf CMU Teaching Award Committee} \hfill Spring 2018 \\ 
+	\textit{Committee Member} 
+
 	{\bf Board of Aeons} \hfill June 2016 - May 2017 \\
 	\textit{Undergraduate student advisor to Indiana University President McRobbie}
 
-	{\bf FIRST Lego Robotics Co-Coach} \hfill June - Dec 2015  
+	{\bf FIRST Lego Robotics} \hfill June - Dec 2015  
+	\textit{Co-Coach}
 
 	{\bf Indiana University Sexual Violence Prevention Taskforce} \hfill Fall 2015  
 
@@ -145,7 +149,57 @@ Minors: Mathematics, Linguistics, International Studies
 
 \end{rSection}
 
+%------------------------------------------------
+%    Presentations
+%------------------------------------------------
+\begin{rSection}{Presentations \& Talks}
+	{\bf re:publica Accra} \hfill Dec 2018 \\
+		``Turtles, Locks, and Bathrooms'' (planned) 
 
+	{\bf Opportunities in Undergrad Research in CS} \hfill Oct 2018 \\ 
+		``Anything But Not Everything'' (student keynote)
+
+	{\bf Cylab Partners Conference}  \hfill Oct 2018 \\ 
+		``Turtles, Locks, and Bathrooms''
+
+	{\bf Grace Hopper Conference} \hfill Oct 2018 \\ 
+		``Behind the Scenes of GHC'' (moderator, panel on nonprofit governance)
+
+	{\bf Symposium on Usable Privacy and Security} \hfill Aug 2018 \\ 
+		``Exploring 2FA Adoption At a University'' (poster) 
+
+	{\bf Privacy Enhancing Technologies} \hfill Jul 2018 \\ 
+		``Turtles, Locks, and Bathrooms'' 
+
+	{\bf CMU Privacy Seminar}  \hfill Jul 2018 \\ 
+		``Turtles, Locks, and Bathrooms''
+
+	{\bf Privacy Law Scholars Conference} \hfill Jun 2018 \\ 
+		``Turles, Locks, and Bathrooms'' (by invitation only) 
+
+	{\bf Opportunities in Undergrad Research in CS} \hfill Oct 2017 \\ 
+		``The Graduate School Experience'' (panelist) \
+
+	{\bf Indiana University Women in Computing Celebration} \hfill Apr 2017 \\ 
+		``The Robotanist'' (student keynote) 
+
+	{\bf Robotics Institute Summer Scholar Symposium} \hfill Aug 2016 \\ 
+		``Sorghum Stalk Detection for an Agricultural System'' (poster) 
+
+	{\bf Indiana University Research in CS Symposium} \hfill Apr 2015 \\
+		``Your Name Here: Exploring the Sociotechnical Impacts of Character Encoding'' (poster)  
+
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
+%	OTHER PROJECTS
+%----------------------------------------------------------------------------------------
+\begin{rSection}{Other Media}
+
+	{\bf ``It Pains You''} \hfill Sept 2018 \\ 
+	{Designer and director for an immersive group art piece exploring the distinction between pain and violence for Bricolage Production Company's Bazaar} 
+
+\end{rSection}
 %----------------------------------------------------------------------------------------
 %	TECHNICAL STRENGTHS SECTION
 %----------------------------------------------------------------------------------------
@@ -155,7 +209,7 @@ Minors: Mathematics, Linguistics, International Studies
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Tools & C, Python, C++, Racket (Scheme), OpenCV, ROS, bash  \\
 	Courses & AI for Social Good, Experimental Design, Empirical Methods, Privacy Policy Law \& Technology \\
-	Conferences & Grace Hopper, Privacy Law Scholars, Allied Media \\
+	Conferences & Out4Undergrad, Allied Media \\
 	Miscs & Embroidery, Rugby, Cats \\
 \end{tabular}
 
