--- a/cv.tex
+++ b/cv.tex
@@ -41,7 +41,7 @@
 
 {\bf Carnegie Mellon University, PhD Student} \hfill Started August 2017 \\ 
 \textit{Societal Computing PhD, Institute for Software Research} \hfill {\em Pittsburgh, PA}\\
-Research Interests: Usable Privacy and Security, Authentication, Tech Policy, Tech \& Art
+Research Interests: Usable privacy and security, Tech ethics \& policy, Arts-based methods
 
 {\bf Indiana University, BS in Computer Science} \hfill May 2017 \\ 
 \textit{Concentration: Artificial Intelligence} \hfill {\em Bloomington, IN}\\
@@ -73,10 +73,6 @@ Minors: Mathematics, Linguistics, International Studies
 	\item Integrated a stereo camera and developed a vision algorithm for plant stalk detection in challenging field conditions
 	\end{rSubsection}
 
-	\begin{rSubsection}{Undergraduate Instructor}{Dec 2015 - May 2017}
-	{Indiana University}{Bloomington, IN }
-	\item Developed and taught weekly lab curriculum for Intro to CS and Data Structures courses 
-	\end{rSubsection}
 
 	\begin{rSubsection}{Social Informatics Researcher}{Dec 2014 - Dec 2015}
 	{Indiana University}{Bloomington, IN }
@@ -110,7 +106,7 @@ Minors: Mathematics, Linguistics, International Studies
 \begin{rSection}{Service}
 
 	{\bf AnitaB.org Board of Trustees} \hfill Oct 2017 - \\ 
-	\textit{Student Board Member} 
+	\textit{Board Member} 
 
 	{\bf Graduate Student Assocation} \hfill Aug 2017 - Sept 2018 \\ 
 	\textit{Student Senate Representative} 
@@ -137,12 +133,23 @@ Minors: Mathematics, Linguistics, International Studies
 	{\bf Indiana University Student Assoc.} \hfill Fall 2014 - Dec 2016 \\ 
 	\textit{Speaker of the House, Senate Member} 
 
+
+	{\bf External Reviewing} \\ 
+	ACM CSCW (2019) \\
+	ACM CHI (2019) \\
+	ACM TOPS (2018) \\
+	ACM CCS (2018, shadow) \\
 \end{rSection}
+
+
+
+
 
 %------------------------------------------------
 %    Scholarships & Awards
 %------------------------------------------------
 \begin{rSection}{Fellowships \& Scholarships}
+	{\bf National Science Foundation Graduate Research Fellowship Honorable Mention} \hfill 2019 \\ 
 	{\bf CyLab Presidential Fellowship} \hfill 2018/2019 \\ 
 	{\bf Interactive Intelligence Corporate Partner Scholarship} \hfill 2016 \\ 
 	{\bf National Merit Scholar} \hfill 2013 \\ 
@@ -150,11 +157,29 @@ Minors: Mathematics, Linguistics, International Studies
 \end{rSection}
 
 %------------------------------------------------
+%    Teaching
+%------------------------------------------------
+\newpage
+\begin{rSection}{Teaching}
+
+	{\bf 17-630 Ethics and Policy Issues in Computing} \hfill Spring 2019 \\ 
+	\textit{Teaching Assistant, Carnegie Mellon (guest lectures, grading)} 
+
+	{\bf CSCI-C343 Intro to Data Structures} \hfill  \\  Spring 2017
+	\textit{Undergraduate Instuctor, Indiana University (lab curriculum, grading)} 
+
+	{\bf CSCI-C211, Intro to Computer Science} \hfill Spring 2016 - Fall 2017 \\ 
+	\textit{Undergraduate Instructor, Indiana University (lab curriculum, grading)} 
+
+\end{rSection}
+
+
+%------------------------------------------------
 %    Presentations
 %------------------------------------------------
 \begin{rSection}{Presentations \& Talks}
 	{\bf re:publica Accra} \hfill Dec 2018 \\
-		``Turtles, Locks, and Bathrooms'' (planned) 
+		``Turtles, Locks, and Bathrooms'' 
 
 	{\bf Opportunities in Undergrad Research in CS} \hfill Oct 2018 \\ 
 		``Anything But Not Everything'' (student keynote)
@@ -197,7 +222,7 @@ Minors: Mathematics, Linguistics, International Studies
 \begin{rSection}{Other Media}
 
 	{\bf ``It Pains You''} \hfill Sept 2018 \\ 
-	{Designer and director for an immersive group art piece exploring the distinction between pain and violence for Bricolage Production Company's Bazaar} 
+	{Designer and director for an immersive group art piece exploring the distinction between pain and violence for Bricolage Production Company's \textit{Bazaar}} 
 
 \end{rSection}
 %----------------------------------------------------------------------------------------
@@ -210,7 +235,7 @@ Minors: Mathematics, Linguistics, International Studies
 Tools & C, Python, C++, Racket (Scheme), OpenCV, ROS, bash  \\
 	Courses & AI for Social Good, Experimental Design, Empirical Methods, Privacy Policy Law \& Technology \\
 	Conferences & Out4Undergrad, Allied Media \\
-	Miscs & Embroidery, Rugby, Cats \\
+	Miscs & Embroidery, Conceptual Art, Cats \\
 \end{tabular}
 
 \end{rSection}
