--- a/cv.tex
+++ b/cv.tex
@@ -51,6 +51,25 @@ Minors: Mathematics, Linguistics, International Studies
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
+%	CURRENT PROJECTS
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Ongoing Projects}
+
+{\bf Privacy and Security in the Arts} \hfill January 2018 \\ 
+Artists and museums are increasingly turning to digital data as a medium. The context of art poses new challenges in data governance; while privacy preserves psychological safety, art actively disrupts it. Users don't walk into a gallery expecting a data use agreement. We focus on the case study of ``Project Amelia,'' a large-scale immersive theater production involving real technology, over 100 production team members, and over 800 audience members who contributed their social media data to the performance.
+
+
+{\bf Online Interview Experiment} \hfill April 2018 \\ 
+	Online interviews are a popular research tool, but are an under-studied medium of data collection. We are conducting and analyzing 150 online interviews in a large-scale online experiment to assess differences of data across 7 modes of interviewing (e.g., email vs video).
+
+
+{\bf Mapping Machine Learning} \hfill July 2019 \\ 
+Interdisciplinary project to map out public-facing deployments of Machine Learning in the Pittsburgh, PA area. The team includes public policy, participatory design, and computer science representation.
+
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
 %	PUBLICATIONS SECTION
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Publications}
@@ -100,22 +119,47 @@ Minors: Mathematics, Linguistics, International Studies
 	
 
 %------------------------------------------------
+%    Scholarships & Awards
+%------------------------------------------------
+\begin{rSection}{Fellowships \& Scholarships}
+	{\bf National Science Foundation Graduate Research Fellowship Honorable Mention} \hfill 2019 \\ 
+	{\bf CyLab Presidential Fellowship} \hfill 2018/2019 \\ 
+	{\bf Interactive Intelligence Corporate Partner Scholarship} \hfill 2016 \\ 
+	{\bf National Merit Scholar} \hfill 2013 \\ 
+
+\end{rSection}
+
+\begin{rSection}{Grants}
+	{\bf CMU Interdisciplinary Project Grant (GuSH)} \hfill 2019 \\ 
+	{\bf PEPR Diversity Travel Grant} \hfill 2019 \\ 
+	{\bf SOUPS Student Travel Grant} \hfill 2019 \\ 
+	{\bf PETS NSF Travel Grant} \hfill 2018 \\ 
+\end{rSection}
+	
+%------------------------------------------------
 %    Service
 %------------------------------------------------
 \newpage
 \begin{rSection}{Service}
-
-	{\bf AnitaB.org Board of Trustees} \hfill Oct 2017 - \\ 
+	
+	{\bf AnitaB.org Board of Trustees} \hfill Oct 2017 - Oct 2019\\ 
 	\textit{Board Member} 
 
 	{\bf Graduate Student Assocation} \hfill Aug 2017 - Sept 2018 \\ 
 	\textit{Student Senate Representative} 
+
+
+	{\bf NSF Research Experience for Undergraduates Mentor} \hfill Summer 2019 \\ 
+	\textit{Mentor for two undergraduate students working on an arts and computing research project} 
 
 	{\bf Ethics for Technologists Lecture Series} \hfill Fall 2018 - \\ 
 	\textit{Founder, Organizer} 
 
 	{\bf Science \& Technology Studies for CS Reading Group} \hfill Summer 2018 \\ 
 	\textit{Founder, Organizer} 
+	
+	{\bf NSF Research Experience for Undergraduates Mentor} \hfill Summer 2019 \\ 
+	\textit{Mentor for an undergraduate student working on security research} 
 	
 	{\bf CMU Teaching Award Committee} \hfill Spring 2018 \\ 
 	\textit{Committee Member} 
@@ -146,22 +190,14 @@ Minors: Mathematics, Linguistics, International Studies
 
 
 %------------------------------------------------
-%    Scholarships & Awards
-%------------------------------------------------
-\begin{rSection}{Fellowships \& Scholarships}
-	{\bf National Science Foundation Graduate Research Fellowship Honorable Mention} \hfill 2019 \\ 
-	{\bf CyLab Presidential Fellowship} \hfill 2018/2019 \\ 
-	{\bf Interactive Intelligence Corporate Partner Scholarship} \hfill 2016 \\ 
-	{\bf National Merit Scholar} \hfill 2013 \\ 
-
-\end{rSection}
-
-%------------------------------------------------
 %    Teaching
 %------------------------------------------------
 \newpage
 \begin{rSection}{Teaching}
 
+	{\bf 17-630 Ethics and Policy Issues in Computing} \hfill Spring 2020 \\ 
+	\textit{Teaching Assistant, Carnegie Mellon (guest lectures, grading)} 
+	
 	{\bf 17-630 Ethics and Policy Issues in Computing} \hfill Spring 2019 \\ 
 	\textit{Teaching Assistant, Carnegie Mellon (guest lectures, grading)} 
 
@@ -178,6 +214,12 @@ Minors: Mathematics, Linguistics, International Studies
 %    Presentations
 %------------------------------------------------
 \begin{rSection}{Presentations \& Talks}
+	{\bf Privacy Engineering Practice \& Respect} \hfill Aug 2019 \\
+		``Privacy in the Arts'' 
+		
+	{\bf Symposium on Usable Privacy and Security} \hfill Aug 2019 \\
+		``Against Trust in Technology'' 
+	
 	{\bf re:publica Accra} \hfill Dec 2018 \\
 		``Turtles, Locks, and Bathrooms'' 
 
@@ -221,6 +263,12 @@ Minors: Mathematics, Linguistics, International Studies
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Other Media}
 
+	{\bf Please Try This At Home} \hfill Sept 2019 \\ 
+	{Organizer for a free, crowd-funded, community conference exploring biohacking, transhumanism, and radical bodily autonomy.}
+	
+	{\bf ``Own Up''} \hfill Sept 2019 \\ 
+	{Led a small design and engineering team to build an art installation that explored public social media data for \textit{Project Amelia}, an immersive theater production} 
+	
 	{\bf ``It Pains You''} \hfill Sept 2018 \\ 
 	{Designer and director for an immersive group art piece exploring the distinction between pain and violence for Bricolage Production Company's \textit{Bazaar}} 
 
@@ -232,11 +280,28 @@ Minors: Mathematics, Linguistics, International Studies
 \begin{rSection}{Background}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Tools & C, Python, C++, Racket (Scheme), OpenCV, ROS, bash  \\
-	Courses & AI for Social Good, Experimental Design, Empirical Methods, Privacy Policy Law \& Technology \\
-	Conferences & Out4Undergrad, Allied Media \\
-	Miscs & Embroidery, Conceptual Art, Cats \\
+Tools I Play With & C, Python, C++, Java, Racket (Scheme), OpenCV, ROS, bash  \\
+	Courses & Ethics of AI, AI for Social Good, Experimental Design, Empirical Methods, Privacy Policy Law \& Technology \\
+	Conferences & Color of Surveillance, Out4Undergrad, Allied Media, Radical Exchange \\
+	Miscs & Embroidery, Conceptual Art, Cats, Community Organizing \\
 \end{tabular}
+
+\end{rSection}
+
+
+\vfill
+
+\begin{rSection}{A Note on Values}
+I am constantly striving to make my professional and personal life adhere to a strong set of values. While I often fail, and while these values are in constant flux, they are my aspiration. As a result, I have developed a set of heurstics to guide my actions, many of which are relevant to professional spheres. I do not include these guidelines to evangelize, but to add context to my professional interactions and publicly state them a tool of accountability. \\
+
+{\bf Flight Restrictions} \\  
+In an effort to reduce my carbon footprint, I fly only once per year or in extraordinary cirumstances. \\
+
+{\bf Funding \& Labor Restrictions} \\
+As part of my committment to domestic and global nonviolence, I avoid accepting money, resources, or collaboartions from the defense, immigration enforcement, and detention industries. \\
+
+{\bf Allocating `Free' Time} \\
+I subscribe to a reparative approach to resource allocation. I generally try (though often fail) to direct my social and financial capital to disabled, Black, indigenous, or other systemically marginalized people. \\
 
 \end{rSection}
 
