kl gates fellowship

--- a/cv.tex
+++ b/cv.tex
@@ -28,7 +28,7 @@
 
 \name{Maggie Oates} % Your name
 \address{5000 Forbes Ave, Pittsburgh, Pennsylvania 15213} % Your address
-\address{123-456-7890 \addressSep   moates@cmu.edu \addressSep   oatesmargar@gmail.com} % Your phone number and email
+\address{XXX-XXX-XXXX \addressSep   moates@cmu.edu \addressSep   oatesmargar@gmail.com} % Your phone number and email
 \address{ORCID ID: 0000-0002-1109-2030} % Your phone number and email
 
 \begin{document}
@@ -122,15 +122,16 @@ Interdisciplinary project to map out public-facing deployments of Machine Learni
 %    Scholarships & Awards
 %------------------------------------------------
 \begin{rSection}{Fellowships \& Scholarships}
+	{\bf K\&L Gates Fellowship in Ethics and Computational Technology} \hfill 2019 \\ 
 	{\bf National Science Foundation Graduate Research Fellowship Honorable Mention} \hfill 2019 \\ 
-	{\bf CyLab Presidential Fellowship} \hfill 2018/2019 \\ 
+	{\bf CyLab Presidential Fellowship} \hfill 2018 \\ 
 	{\bf Interactive Intelligence Corporate Partner Scholarship} \hfill 2016 \\ 
 	{\bf National Merit Scholar} \hfill 2013 \\ 
 
 \end{rSection}
 
 \begin{rSection}{Grants}
-	{\bf CMU Interdisciplinary Project Grant (GuSH)} \hfill 2019 \\ 
+	{\bf CMU Interdisciplinary Project Seed Grant (GuSH)} \hfill 2019 \\ 
 	{\bf PEPR Diversity Travel Grant} \hfill 2019 \\ 
 	{\bf SOUPS Student Travel Grant} \hfill 2019 \\ 
 	{\bf PETS NSF Travel Grant} \hfill 2018 \\ 
@@ -261,10 +262,10 @@ Interdisciplinary project to map out public-facing deployments of Machine Learni
 %----------------------------------------------------------------------------------------
 %	OTHER PROJECTS
 %----------------------------------------------------------------------------------------
-\begin{rSection}{Other Media}
+\begin{rSection}{Other Projects}
 
 	{\bf Please Try This At Home} \hfill Sept 2019 \\ 
-	{Organizer for a free, crowd-funded, community conference exploring biohacking, transhumanism, and radical bodily autonomy.}
+	{Organizer for a free, crowd-funded, community conference exploring biohacking, transhumanism, and radical bodily autonomy outside of traditional institutional structures.}
 	
 	{\bf ``Own Up''} \hfill Sept 2019 \\ 
 	{Led a small design and engineering team to build an art installation that explored public social media data for \textit{Project Amelia}, an immersive theater production} 
@@ -277,13 +278,14 @@ Interdisciplinary project to map out public-facing deployments of Machine Learni
 %	TECHNICAL STRENGTHS SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Background}
+\begin{rSection}{Fast Facts}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Tools I Play With & C, Python, C++, Java, Racket (Scheme), OpenCV, ROS, bash  \\
-	Courses & Ethics of AI, AI for Social Good, Experimental Design, Empirical Methods, Privacy Policy Law \& Technology \\
+	Courses & Ethics of AI, AI for Social Good, Privacy Policy Law \& Technology \\
+	Research Courses & Empirical Methods, Experimental Design \\
 	Conferences & Color of Surveillance, Out4Undergrad, Allied Media, Radical Exchange \\
-	Miscs & Embroidery, Conceptual Art, Cats, Community Organizing \\
+	Miscs & Embroidery, Conceptual Art, Cats, Community Organizing, Birdwatching \\
 \end{tabular}
 
 \end{rSection}
@@ -292,16 +294,16 @@ Tools I Play With & C, Python, C++, Java, Racket (Scheme), OpenCV, ROS, bash  \\
 \vfill
 
 \begin{rSection}{A Note on Values}
-I am constantly striving to make my professional and personal life adhere to a strong set of values. While I often fail, and while these values are in constant flux, they are my aspiration. As a result, I have developed a set of heurstics to guide my actions, many of which are relevant to professional spheres. I do not include these guidelines to evangelize, but to add context to my professional interactions and publicly state them a tool of accountability. \\
+I am constantly striving to make my professional and personal life adhere to a strong set of values. While I often fail, and while these values are in constant flux, they are my aspirations. As a result, I rely on a set of heurstics to guide my actions, many of which are relevant to professional spheres. I do not include these guidelines to evangelize, but to add context to my professional interactions and publicly state them a tool of accountability. \\
 
 {\bf Flight Restrictions} \\  
 In an effort to reduce my carbon footprint, I fly only once per year or in extraordinary cirumstances. \\
 
 {\bf Funding \& Labor Restrictions} \\
-As part of my committment to domestic and global nonviolence, I avoid accepting money, resources, or collaboartions from the defense, immigration enforcement, and detention industries. \\
+As part of my committment to domestic and global nonviolence, I avoid accepting money, resources, or collaboartions from the defense, immigration enforcement, prison, and detention industries. \\
 
-{\bf Allocating `Free' Time} \\
-I subscribe to a reparative approach to resource allocation. I generally try (though often fail) to direct my social and financial capital to disabled, Black, indigenous, or other systemically marginalized people. \\
+%{\bf Allocating `Free' Time} \\
+%I subscribe to a reparative approach to resource allocation. I generally try (though often fail) to direct my social and financial capital to disabled, Black, indigenous, or other systemically marginalized people. \\
 
 \end{rSection}
 
