--- a/cv.tex
+++ b/cv.tex
@@ -143,12 +143,17 @@ Interdisciplinary project to map out public-facing deployments of Machine Learni
 \newpage
 \begin{rSection}{Service}
 	
+	{\bf REUSE Admissions Committee} \hfill Spring 2020 \\ 
+	\textit{Research Experience for Undergraduates in Software Engineering}
+
 	{\bf AnitaB.org Board of Trustees} \hfill Oct 2017 - Oct 2019\\ 
 	\textit{Board Member} 
 
+	{\bf REUSE Admissions Committee} \hfill Spring 2019 \\ 
+	\textit{Research Experience for Undergraduates in Software Engineering}
+	
 	{\bf Graduate Student Assocation} \hfill Aug 2017 - Sept 2018 \\ 
 	\textit{Student Senate Representative} 
-
 
 	{\bf NSF Research Experience for Undergraduates Mentor} \hfill Summer 2019 \\ 
 	\textit{Mentor for two undergraduate students working on an arts and computing research project} 
@@ -168,7 +173,7 @@ Interdisciplinary project to map out public-facing deployments of Machine Learni
 	{\bf Board of Aeons} \hfill June 2016 - May 2017 \\
 	\textit{Undergraduate student advisor to Indiana University President McRobbie}
 
-	{\bf FIRST Lego Robotics} \hfill June - Dec 2015  
+	{\bf FIRST Lego Robotics} \hfill June - Dec 2015 \\ 
 	\textit{Co-Coach}
 
 	{\bf Indiana University Sexual Violence Prevention Taskforce} \hfill Fall 2015  
@@ -215,6 +220,9 @@ Interdisciplinary project to map out public-facing deployments of Machine Learni
 %    Presentations
 %------------------------------------------------
 \begin{rSection}{Presentations \& Talks}
+	{\bf International Assoc. of Privacy Professionals Global Privacy Summit} \hfill April 2020 \\
+		``Privacy in Art: Edge Cases and Case Studies''
+	
 	{\bf Privacy Engineering Practice \& Respect} \hfill Aug 2019 \\
 		``Privacy in the Arts'' 
 		
