--- a/cv.tex
+++ b/cv.tex
@@ -220,8 +220,8 @@ Interdisciplinary project to map out public-facing deployments of Machine Learni
 %    Presentations
 %------------------------------------------------
 \begin{rSection}{Presentations \& Talks}
-	{\bf International Assoc. of Privacy Professionals Global Privacy Summit} \hfill April 2020 \\
-		``Privacy in Art: Edge Cases and Case Studies''
+	%{\bf International Assoc. of Privacy Professionals Global Privacy Summit} \hfill April 2020 \\
+	%	``Privacy in Art: Edge Cases and Case Studies''
 	
 	{\bf Privacy Engineering Practice \& Respect} \hfill Aug 2019 \\
 		``Privacy in the Arts'' 
@@ -271,6 +271,9 @@ Interdisciplinary project to map out public-facing deployments of Machine Learni
 %	OTHER PROJECTS
 %----------------------------------------------------------------------------------------
 \begin{rSection}{Other Projects}
+
+	{\bf Object-Oriented Orgasm @ University of Chicago} \hfill March 2020 \\ 
+	{Cohort member of OOOHacks, a 3-day collaborative event exploring the intersection of sex, inclusive design, HCI, and hardward. My team posed the question, ``How do you have sex in/with Non-Newtonian fluid?''}
 
 	{\bf Please Try This At Home} \hfill Sept 2019 \\ 
 	{Organizer for a free, crowd-funded, community conference exploring biohacking, transhumanism, and radical bodily autonomy outside of traditional institutional structures.}
