typos, adding fossil fuel

--- a/cv.tex
+++ b/cv.tex
@@ -273,7 +273,7 @@ Interdisciplinary project to map out public-facing deployments of Machine Learni
 \begin{rSection}{Other Projects}
 
 	{\bf Object-Oriented Orgasm @ University of Chicago} \hfill March 2020 \\ 
-	{Cohort member of OOOHacks, a 3-day collaborative event exploring the intersection of sex, inclusive design, HCI, and hardward. My team posed the question, ``How do you have sex in/with Non-Newtonian fluid?''}
+	{Cohort member of OOOHacks, a 3-day collaborative event exploring the intersection of sex, inclusive design, HCI, and hardware. My team posed the question, ``How do you have sex in/with Non-Newtonian fluid?''}
 
 	{\bf Please Try This At Home} \hfill Sept 2019 \\ 
 	{Organizer for a free, crowd-funded, community conference exploring biohacking, transhumanism, and radical bodily autonomy outside of traditional institutional structures.}
@@ -311,7 +311,7 @@ I am constantly striving to make my professional and personal life adhere to a s
 In an effort to reduce my carbon footprint, I fly only once per year or in extraordinary cirumstances. \\
 
 {\bf Funding \& Labor Restrictions} \\
-As part of my committment to domestic and global nonviolence, I avoid accepting money, resources, or collaboartions from the defense, immigration enforcement, prison, and detention industries. \\
+As part of my committment to domestic and global nonviolence, I avoid accepting money, resources, or collaboartions from the defense, immigration enforcement, prison, fossil fuel extraction, and detention industries. \\
 
 %{\bf Allocating `Free' Time} \\
 %I subscribe to a reparative approach to resource allocation. I generally try (though often fail) to direct my social and financial capital to disabled, Black, indigenous, or other systemically marginalized people. \\
